WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237001
[JSC] Fix ShadowRealm unwinding
https://bugs.webkit.org/show_bug.cgi?id=237001
Summary
[JSC] Fix ShadowRealm unwinding
Yusuke Suzuki
Reported
2022-02-21 15:34:17 PST
[JSC] Fix ShadowRealm unwinding
Attachments
Patch
(3.63 KB, patch)
2022-02-21 15:37 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-02-21 15:37:13 PST
Created
attachment 452788
[details]
Patch
Yusuke Suzuki
Comment 2
2022-02-21 18:16:51 PST
Committed
r290283
(
247607@trunk
): <
https://commits.webkit.org/247607@trunk
>
Radar WebKit Bug Importer
Comment 3
2022-02-21 18:17:17 PST
<
rdar://problem/89268429
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug